2004-12-13  Lluis Sanchez Gual <lluis@novell.com>

	* Gui/BrowserDisplayBinding/HtmlViewPane.cs:
	StatusBarService.ProgressMonitor is not a StatusBar widget any more.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/StatusBar/DefaultStatusBarService.cs: Made it gui thread safe.

2004-12-11  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Commands/EditCommands.cs,
	* Gui/ContentInterfaces/ICodeStyleOperations.cs: Added support and menu
	entries for the already implemented Indent and UnIndent selection.

2004-12-09  Todd Berman  <tberman@off.net>

	* Gui/Pads/HelpBrowser/HelpViewer.cs: gtk# API changed again (thanks
	mikey!)

2004-12-08  Everaldo Canuto  <everaldo_canuto@yahoo.com.br>

	* Internal/Project/Combine/Combine.cs: Add support to multiple runtime
	in Makefiles generated by MonoDevelop.
	
2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>

	*  Gui/ContentInterfaces/ICodeStyleOperations.cs: Added to rule style changes in code like (Un)Comment Code
	* Commands/EditCommands.cs: Changed to handle (Un)CommentCode menu options
	* Internal/Codons/LanguageBinding/ILanguageBinding.cs: Added CommentTag to all language bindings
	* MakeFile.am: Added reference to Gui/ContentInterfaces/ICodeStyleOperations.cs

2004-12-07  Todd Berman  <tberman@off.net>

	* Gui/Pads/HelpBrowser/HelpViewer.cs: Update to new gtk# api.

2004-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/DispatchService/DispatchService.cs: Made some method non-static.
	* Services/DispatchService/GuiSyncContext.cs: Minor fix.
	* Services/Tasks/TaskService.cs: Added ShowTasks method, which brings
	to the front the task view.
	* Services/Project/DefaultProjectService.cs: It is the resposibility
	of the subscriber to handle the event in the right thread.
	* Services/MessageService.cs: Handle gui-thread transitions automatically
	by deriving from GuiSyncAbstractService.
	* Gui/Workbench/DefaultWorkbench.cs,
	* Gui/Pads/OpenTaskView.cs,
	* Gui/Pads/TerminalPad.cs,